update license name

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
 		"Bootstrap"
 	],
 	"homepage"   : "https://github.com/cmln/chameleon",
-	"license"    : "GPL-3.0+",
+	"license"    : "GPL-3.0-or-later",
 	"authors"    : [
 		{
 			"name" : "Stephan Gambke",
